fix spacing for notes list

--- a/sass/spacing.scss
+++ b/sass/spacing.scss
@@ -2,16 +2,17 @@
 ----------------------------------------------- */
 [data-spacing="default"] #notes-list .note {
   // margin: 14px 16px;
-  margin: 8px 8px;
+  //margin: 8px 8px;
+  margin: 8px 16px 8px 8px;
   padding: 8px 16px;
 }
 
 [data-spacing="default"] #notes-list .note:first-of-type {
-  margin-top: 16px;
+  //margin-top: 16px;
 }
 
 [data-spacing="default"] #notes-list .note:last-of-type {
-  margin-bottom: 16px;
+  //margin-bottom: 16px;
 }
 
 /*
